fixed login scrollbar bug

--- a/assets/css/login.scss
+++ b/assets/css/login.scss
@@ -1,6 +1,6 @@
 main {
     padding-top: 8%;
-    height: 75.5vh;
+    height: 75.4vh;
     color: white;
     background-color: black;
 }
